<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/da_profile_2" />

    <ImageView
        android:id="@+id/ivBack"
        style="@style/DABackIcon"
        android:padding="@dimen/da_spacing_control"
        android:src="@drawable/da_ic_close"
        app:tint="@color/da_white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        android:background="@drawable/da_gradation_black"
        android:paddingTop="@dimen/da_spacing_xxxlarge"
        android:paddingBottom="@dimen/da_spacing_xlarge">

        <TextView
            android:id="@+id/tvName"
            style="@style/DAHeading"
            android:text="@string/da_william_26"
            android:textColor="@color/da_white" />

        <TextView
            android:id="@+id/tvProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:text="@string/da_profession"
            android:textAppearance="@style/DAFontSemiBold"
            android:textColor="@color/da_white"
            android:textSize="@dimen/da_font_size_xlarge" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProfession"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/da_spacing_large"
            android:layout_marginEnd="43dp"
            android:layout_toStartOf="@id/ivEdit"
            android:text="@string/da_about"
            android:textAppearance="@style/DAFontSemiBold"
            android:textColor="@color/da_white"
            android:textSize="@dimen/da_font_size_large" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignTop="@id/tvAbout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:background="@drawable/da_circle_redprimary"
            android:padding="@dimen/da_spacing_middle"
            android:src="@drawable/da_ic_mode_edit_black_24dp"
            app:tint="@color/da_white" />

        <TextView
            android:id="@+id/edtLocation"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAbout"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:text="Proffession"
            android:textAppearance="@style/DAFontSemiBold"
            android:textColor="@color/da_white"
            android:textSize="@dimen/da_font_size_xlarge" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="387dp"
            android:layout_height="47dp"
            android:layout_below="@id/tvAbout"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:text="@string/da_profession"
            android:textAppearance="@style/DAFontSemiBold"
            android:textColor="@color/da_white"
            android:textSize="@dimen/da_font_size_large" />

        <TextView
            android:id="@+id/edtMobileNum"
            android:layout_width="387dp"
            android:layout_height="48dp"
            android:layout_below="@id/tvMore"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:text="Status:"
            android:textAppearance="@style/DAFontSemiBold"
            android:textColor="@color/da_white"
            android:textSize="@dimen/da_font_size_xlarge" />

        <TextView
            android:id="@+id/tvMoreAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMore"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:text="@string/da_about"
            android:textAppearance="@style/DAFontSemiBold"
            android:textColor="@color/da_white"
            android:textSize="@dimen/da_font_size_large" />
    </RelativeLayout>
</RelativeLayout>